Fix stretched assets

--- a/bundles/AdminBundle/Resources/public/css/admin.css
+++ b/bundles/AdminBundle/Resources/public/css/admin.css
@@ -523,7 +523,7 @@
 }
 
 .asset_folder_preview .thumb{
-    width: 250px;
+    max-width: 250px;
     max-height: 220px;
 }
 
